[tool.poetry]
name = "ll-parser"
version = "0.1.0"
description = ""
authors = ["asolana <asolana@deloitte.es>"]
readme = "README.md"
packages = [{include = "ll_parser"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
